deployed_apps/my-new-go-app/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-new-go-app
  labels:
    kubernetes.io/metadata.name: my-new-go-app
    backstage.io/kubernetes-id: my-new-go-app
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
