deployed_apps/my-new-go-app/base/my-new-go-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-new-go-app
  namespace: my-new-go-app
  labels:
    app: my-new-go-app
    version: 0.0.1
    backstage.io/kubernetes-id: my-new-go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-new-go-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-new-go-app
        version: 0.0.1
        backstage.io/kubernetes-id: my-new-go-app
      annotations:
        sidecar.istio.io/proxyCPU: "100m"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"        
    spec:
      containers:
      - name: my-new-go-app
        image: webgo
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
