deployed_apps/my-new-go-app/base/my-new-go-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-new-go-app-service
  namespace: my-new-go-app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: my-new-go-app.pauloponciano.digital
  labels:
    app: my-new-go-app
    version: 0.0.1
    backstage.io/kubernetes-id: my-new-go-app
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: my-new-go-app
