deployed_apps/my-new-go-app/base/my-new-go-app-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-new-go-app-gw
  namespace: my-new-go-app
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - my-new-go-app.pauloponciano.digital
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - my-new-go-app.pauloponciano.digital
      port:
        name: https-workloads
        number: 443
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-new-go-app-vs
  namespace: my-new-go-app
  labels:
    app: my-new-go-app
    version: 0.0.1
    backstage.io/kubernetes-id: my-new-go-app
spec:
  gateways:
  - my-new-go-app-gw
  hosts:
  - my-new-go-app.pauloponciano.digital
  http:
  - name: primary
    route:
    - destination:
        host: my-new-go-app-service
      weight: 100
